--- a/FamilyTree.Modules.Person/Views/CreateChildView.xaml
+++ b/FamilyTree.Modules.Person/Views/CreateChildView.xaml
@@ -6,7 +6,7 @@
              xmlns:business="clr-namespace:FamilyTree.Business;assembly=FamilyTree.Business"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
              prism:ViewModelLocator.AutoWireViewModel="True"
-             Height="700">
+             Height="750">
     <UserControl.Resources>
         <converters:GenderToBoolConverter x:Key="btg" />
         <converters:PathConverter x:Key="path" />
@@ -24,20 +24,17 @@
             <RowDefinition Height="4*" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
-        <Label Grid.Row="0"
-               Grid.ColumnSpan="5"
-               Content="Személy létrehozása"
-               HorizontalContentAlignment="Left"
-               VerticalContentAlignment="Top"
-               FontSize="24"
-               FontWeight="Bold" />
+        <TextBlock Grid.Row="0"
+                   Grid.ColumnSpan="5"
+                   Text="Személy létrehozása"
+                   Style="{StaticResource sub_title}" />
 
         <Image Source="{Binding Father.ImagePath, Converter={StaticResource path}}"
                Height="150"
                Width="150"
                Grid.Row="1"
-               Grid.Column="0"/>
-        
+               Grid.Column="0" />
+
         <Image Source="{Binding Mother.ImagePath, Converter={StaticResource path}}"
                Height="150"
                Width="150"
@@ -66,7 +63,7 @@
                    Grid.Row="0"
                    Grid.Column="0"
                    Grid.RowSpan="4"
-                   Margin="20,0"/>
+                   Margin="20,0" />
 
             <Button Grid.Row="5"
                     Margin="20,5"
@@ -74,36 +71,41 @@
                 <StackPanel Margin="10,0"
                             Orientation="Horizontal">
                     <fa:FontAwesome Icon="Upload"
-                                    FontSize="18"
-                                    Foreground="White" />
+                                    VerticalAlignment="Center" />
                     <TextBlock Text=" Kép hozzáadása"
-                               FontSize="18" />
+                               VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
             <StackPanel Orientation="Vertical"
                         Grid.Row="0"
                         Grid.Column="1">
-                <TextBlock Text="Keresztnév" />
+                <TextBlock Text="Keresztnév"
+                           Style="{StaticResource description}" />
                 <TextBox Text="{Binding NewPerson.LastName}" />
             </StackPanel>
             <StackPanel Orientation="Vertical"
                         Grid.Row="1"
                         Grid.Column="1">
-                <TextBlock Text="Vezetéknév" />
+                <TextBlock Text="Vezetéknév"
+                           Style="{StaticResource description}" />
                 <TextBox Text="{Binding NewPerson.FirstName}" />
             </StackPanel>
             <StackPanel Orientation="Vertical"
                         Grid.Row="2"
                         Grid.Column="1">
-                <TextBlock Text="Született" />
+                <TextBlock Text="Született"
+                           Style="{StaticResource description}" />
                 <DatePicker HorizontalAlignment="Stretch"
-                    SelectedDate="{Binding NewPerson.DateOfBirth}" />
+                            Foreground="Black"
+                            SelectedDate="{Binding NewPerson.DateOfBirth}" />
             </StackPanel>
             <StackPanel Orientation="Vertical"
                         Grid.Row="3"
                         Grid.Column="1">
-                <TextBlock Text="Elhunyt" />
+                <TextBlock Text="Elhunyt"
+                           Style="{StaticResource description}" />
                 <DatePicker HorizontalAlignment="Stretch"
+                            Foreground="Black"
                             SelectedDate="{Binding NewPerson.DateOfDeath}" />
             </StackPanel>
             <StackPanel Grid.Row="4"
@@ -114,11 +116,13 @@
                 <RadioButton GroupName="NewPersonGender"
                              Grid.Column="1"
                              IsChecked="{Binding NewPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}"
-                             Content="Férfi" />
+                             Content="Férfi"
+                             Foreground="White"/>
                 <RadioButton GroupName="NewPersonGender"
                              Grid.Column="1"
                              IsChecked="{Binding NewPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}"
-                             Content="Nő" />
+                             Content="Nő"
+                             Foreground="White"/>
             </StackPanel>
         </Grid>
 
@@ -133,28 +137,23 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Image Source="{Binding Mother.Image}"
-                   Height="150"
-                   Width="150"
-                   Grid.Row="0" />
-
             <TextBlock Grid.Row="0"
-                       FontSize="16"
+                       Style="{StaticResource description}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Text="{Binding Mother.LastName}" />
             <TextBlock Grid.Row="1"
-                       FontSize="16"
+                       Style="{StaticResource description}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Text="{Binding Mother.FirstName}" />
             <TextBlock Grid.Row="2"
-                       FontSize="16"
+                       Style="{StaticResource description}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Text="{Binding Mother.DateOfBirth, StringFormat='{}{0:yyyy.MM.dd}'}" />
             <TextBlock Grid.Row="3"
-                       FontSize="16"
+                       Style="{StaticResource description}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Text="{Binding Mother.DateOfDeath, StringFormat='{}{0:yyyy.MM.dd}'}" />
@@ -166,11 +165,13 @@
                 <RadioButton GroupName="MotherGender"
                              IsEnabled="False"
                              IsChecked="{Binding Mother.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}"
-                             Content="Férfi" />
+                             Content="Férfi"
+                             Foreground="White"/>
                 <RadioButton GroupName="MotherGender"
                              IsEnabled="False"
                              IsChecked="{Binding Mother.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}"
-                             Content="Nő" />
+                             Content="Nő"
+                             Foreground="White" />
             </StackPanel>
         </Grid>
 
@@ -185,22 +186,22 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0"
-                       FontSize="16"
+                       Style="{StaticResource description}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Text="{Binding Father.LastName}" />
             <TextBlock Grid.Row="1"
-                       FontSize="16"
+                       Style="{StaticResource description}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Text="{Binding Father.FirstName}" />
             <TextBlock Grid.Row="2"
-                       FontSize="16"
+                       Style="{StaticResource description}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Text="{Binding Father.DateOfBirth, StringFormat='{}{0:yyyy.MM.dd}'}" />
             <TextBlock Grid.Row="3"
-                       FontSize="16"
+                       Style="{StaticResource description}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Text="{Binding Father.DateOfDeath, StringFormat='{}{0:yyyy.MM.dd}'}" />
@@ -212,11 +213,13 @@
                 <RadioButton GroupName="FatherGender"
                              IsEnabled="False"
                              IsChecked="{Binding Father.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}"
-                             Content="Férfi" />
+                             Content="Férfi" 
+                             Foreground="White"/>
                 <RadioButton GroupName="FatherGender"
                              IsEnabled="False"
                              IsChecked="{Binding Father.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}"
-                             Content="Nő" />
+                             Content="Nő"
+                             Foreground="White"/>
             </StackPanel>
         </Grid>
         <Button Grid.Row="4"
@@ -226,10 +229,9 @@
             <StackPanel Margin="5"
                         Orientation="Horizontal">
                 <fa:FontAwesome Icon="Save"
-                                FontSize="20"
-                                Foreground="White" />
+                                VerticalAlignment="Center" />
                 <TextBlock Text=" Mentés"
-                           FontSize="20" />
+                           VerticalAlignment="Center" />
             </StackPanel>
         </Button>
 
@@ -243,31 +245,31 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Label Grid.Row="0"
-                   Content="Vezetéknév"
-                   FontSize="16"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-            <Label Grid.Row="1"
-                   Content="Utónév"
-                   FontSize="16"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-            <Label Grid.Row="2"
-                   Content="Született"
-                   FontSize="16"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-            <Label Grid.Row="3"
-                   Content="Elhunyt"
-                   FontSize="16"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-            <Label Grid.Row="4"
-                   Content="Nem"
-                   FontSize="16"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
+            <TextBlock Grid.Row="0"
+                       Text="Vezetéknév"
+                       Style="{StaticResource description}"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
+            <TextBlock Grid.Row="1"
+                       Text="Utónév"
+                       Style="{StaticResource description}"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
+            <TextBlock Grid.Row="2"
+                       Text="Született"
+                       Style="{StaticResource description}"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
+            <TextBlock Grid.Row="3"
+                       Text="Elhunyt"
+                       Style="{StaticResource description}"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
+            <TextBlock Grid.Row="4"
+                       Text="Nem"
+                       Style="{StaticResource description}"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
         </Grid>
     </Grid>
 </UserControl>
