--- a/FamilyTree/FamilyTree/App.xaml
+++ b/FamilyTree/FamilyTree/App.xaml
@@ -3,7 +3,9 @@
                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         xmlns:local="clr-namespace:FamilyTree"
                         xmlns:prism="http://prismlibrary.com/"
-                        xmlns:ui="http://schemas.modernwpf.com/2019">
+                        xmlns:ui="http://schemas.modernwpf.com/2019"
+                        xmlns:core="clr-namespace:FamilyTree.Core;assembly=FamilyTree.Core"
+                        xmlns:fa="http://schemas.fontawesome.io/icons/">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -16,6 +18,14 @@
             <Style TargetType="{x:Type Button}">
                 <Setter Property="Background"
                         Value="Black" />
+                <Setter Property="Foreground"
+                        Value="White" />
+                <Setter Property="FontSize"
+                        Value="20" />
+                <Setter Property="HorizontalContentAlignment"
+                        Value="Center" />
+                <Setter Property="VerticalContentAlignment"
+                        Value="Center" />
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
@@ -39,18 +49,10 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>
-            
+
             <!-- Navigation panel -->
             <Style TargetType="ListView">
-                
-            </Style>
 
-            <!-- Text -->
-            <Style TargetType="{x:Type TextBlock}">
-                <Setter Property="FontFamily"
-                        Value="Aharoni" />
-                <Setter Property="Foreground"
-                        Value="White" />
             </Style>
 
             <!-- Explicit styles -->
@@ -88,22 +90,44 @@
 
             <!--#region Color -->
 
-            <!-- Nav bar  -->
-            <Style x:Key="nav_bar_color"
-                   TargetType="ListView">
-                <Setter Property="Background"
-                        Value="#3500D3" />
+            <Style x:Key="title"
+                   TargetType="{x:Type TextBlock}">
+                <Setter Property="VerticalAlignment"
+                        Value="Top" />
+                <Setter Property="HorizontalAlignment"
+                        Value="Left" />
+                <Setter Property="Foreground"
+                        Value="White" />
+                <Setter Property="FontSize"
+                        Value="24" />
+                <Setter Property="FontWeight"
+                        Value="Bold" />
             </Style>
 
-            <!-- Function bar -->
-            <Style x:Key="func_bar_color">
-                <Style.Resources>
-                    <Style TargetType="StackPanel">
-                        <Setter Property="Background"
-                                Value="Black" />
-                    </Style>
-                </Style.Resources>
+            <Style x:Key="sub_title"
+                   TargetType="{x:Type TextBlock}">
+                <Setter Property="VerticalAlignment"
+                        Value="Center" />
+                <Setter Property="HorizontalAlignment"
+                        Value="Center" />
+                <Setter Property="Foreground"
+                        Value="White" />
+                <Setter Property="FontSize"
+                        Value="20" />
+                <Setter Property="FontWeight"
+                        Value="Bold" />
             </Style>
+
+            <Style x:Key="description"
+                   TargetType="{x:Type TextBlock}">
+                <Setter Property="VerticalAlignment"
+                        Value="Center" />
+                <Setter Property="Foreground"
+                        Value="White" />
+                <Setter Property="FontSize"
+                        Value="14" />
+            </Style>
+
             <!--#endregion-->
         </ResourceDictionary>
     </Application.Resources>
