--- a/FamilyTree.Modules.FamilyTree/Views/BackFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/BackFamilyTreeView.xaml
@@ -9,11 +9,8 @@
                 Height="75"
                 Command="{Binding NavigateBackCommand}">
             <StackPanel Orientation="Horizontal">
-                <fa:FontAwesome Icon="ArrowLeft"
-                                Foreground="White"
-                                FontSize="20" />
-                <TextBlock Text=" Vissza"
-                           FontSize="20" />
+                <fa:FontAwesome Icon="ArrowLeft" VerticalAlignment="Center" />
+                <TextBlock Text=" Vissza" VerticalAlignment="Center" />
             </StackPanel>
         </Button>
 
